--- a/pages/index.html
+++ b/pages/index.html
@@ -48,13 +48,13 @@
                             Newton Paiva irá oferecer provas online para inscrições de vestibular, para que
                             você não fique de fora das nossas campanhas.
                         </p>
-                        <p class="inner-desc font-weight-bold mb-5 pb-lg-2">
+                        <p class="inner-desc font-weight-bold mb-4 mb-lg-5 pb-lg-2">
                             Veja abaixo como a prova será realizada:
                         </p>
                     </div>
                 </header>
-                <section class="row mb-5">
-                    <div class="col-sm-6 col-lg-3 mb-5 mb-lg-0">
+                <section class="row mb-3 mb-lg-5">
+                    <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                         <article class="justify-content-center align-items-center align-items-md-start text-center text-lg-left">
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
@@ -70,7 +70,7 @@
                             </p>
                         </article>
                     </div>
-                    <div class="col-sm-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                         <article class="justify-content-center align-items-center align-items-md-start text-center text-lg-left">
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
@@ -86,7 +86,7 @@
                             </p>
                         </article>
                     </div>
-                    <div class="col-sm-6 col-lg-3 mb-5 mb-lg-0">
+                    <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                         <article class="justify-content-center align-items-center align-items-md-start text-center text-lg-left">
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
@@ -103,7 +103,7 @@
                             </p>
                         </article>
                     </div>
-                    <div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
+                    <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                         <article class="justify-content-center justify-content-lg-start align-items-center align-items-md-start text-center text-lg-left">
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
@@ -121,7 +121,7 @@
                         </article>
                     </div>
                 </section>
-                <form id="form_inscription_vest" class="px-3 pb-3 mt-5 inscricao-form"action="https://meuportalcare.force.com/portaldocandidato/NpLogin" method="POST" autocomplete="off">
+                <form id="form_inscription_vest" class="px-3 pb-3 mt-3 mt-lg-4 inscricao-form"action="https://meuportalcare.force.com/portaldocandidato/NpLogin" method="POST" autocomplete="off">
                     <input type="hidden" name="oid" value="00D15000000NPmK">
                     <input type="hidden" name="lead_source" value="Website">
                     <input type="hidden" name="input_candidato" value="true">
@@ -218,7 +218,7 @@
                                         </div>
                                     </label>
                                 </div>
-                                <div class="col-12 d-flex justify-content-center mt-5">
+                                <div class="col-12 d-flex justify-content-center mt-4 mt-lg-5">
                                     <button class="btn-main" type="submit">
                                         Inscreva-se agora
                                     </button>
