Add w2l custom select functions

--- a/pages/index.html
+++ b/pages/index.html
@@ -165,11 +165,10 @@
                                     <div class="form-group">
                                         <select type="text" class="form-control" id="tipo_de_ingresso" name="tipo_de_ingresso">
                                             <option value="" selected disabled>Selecione o tipo de ingresso:</option>
-                                            <option value="Concurso de Bolsas">Concurso de Bolsas</option>
                                             <option value="Disciplina Isolada">Disciplina Isolada</option>
                                             <option value="ENEM">ENEM</option>
                                             <option value="Obtenção de novo título">Obtenção de novo título</option>
-                                            <option value="Retorno/Destrancamento">Retorno/Destrancamento</option>
+                                            <option value="Retorno/destrancamento">Retorno/Destrancamento</option>
                                             <option value="Vestibular Agendado">Vestibular Agendado</option>
                                             <option value="Transferência">Transferência</option>
                                         </select>
@@ -177,17 +176,17 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <select type="text" class="form-control" id="Modalidade__c" name="Modalidade__c">
+                                        <select type="text" class="form-control" id="Modalidade__c" name="Modalidade__c" disabled="true">
                                             <option value="" selected disabled>Selecione a modalidade:</option>
                                             <option value="Presencial">Presencial</option>
-                                            <option value="Semipresencial">Semipresencial</option>
+                                            <option value="Semi-Presencial">Sem-Presencial</option>
                                             <option value="EAD">EAD</option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <select type="text" class="form-control" id="Curso_de_interesse__c" name="Curso_de_interesse__c">
+                                        <select type="text" class="form-control" id="Curso_de_interesse__c" name="Curso_de_interesse__c" disabled="true">
                                             <option value="" selected disabled>Selecione o curso:</option>
                                         </select>
                                     </div>
