--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             crossorigin="anonymous">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
 
     </head>
 
@@ -175,7 +175,7 @@
                                     type="text"
                                     class="form-control"
                                     placeholder="E-mail"
-                                    id="name"
+                                    id="email"
                                     name="email">
                             </div>
                         </div>
@@ -310,7 +310,7 @@
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
-        <script src="../js/forms.js"></script>
-        <script src="../js/misc.js"></script>
+        <script src="./js/forms.js"></script>
+        <script src="./js/misc.js"></script>
     </body>
 </html>
