--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
                                     class="mx-auto form-ico mb-4"
-                                    src="../images/ico/foto.png"
+                                    src="./images/ico/foto.png"
                                     alt="Ícone representando uma selfie">
                             </div>
                             <h2 class="sub-title">
@@ -79,7 +79,7 @@
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
                                     class="mx-auto form-ico mb-4"
-                                    src="../images/ico/upload.png"
+                                    src="./images/ico/upload.png"
                                     alt="Ícone representando um upload">
                             </div>
                             <h2 class="sub-title">
@@ -96,7 +96,7 @@
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
                                     class="mx-auto form-ico mb-4"
-                                    src="../images/ico/prova.png"
+                                    src="./images/ico/prova.png"
                                     alt="Ícone representando uma prova">
                             </div>
                             <h2 class="sub-title">
@@ -114,7 +114,7 @@
                             <div class="d-flex justify-content-center mr-lg-3">
                                 <img
                                     class="mx-auto form-ico mb-4"
-                                    src="../images/ico/joinha.png"
+                                    src="./images/ico/joinha.png"
                                     alt="Ícone representando um joinha (sinal de afirmativo)">
                             </div>
                             <h2 class="sub-title">
